--- a/EFIDS/EFIDS.csproj
+++ b/EFIDS/EFIDS.csproj
@@ -175,6 +175,8 @@
     <Compile Include="Entities\Directory\Directory_TypeDivision.cs" />
     <Compile Include="Entities\Directory\Directory_Ways.cs" />
     <Compile Include="Entities\Directory\Directory_Cars_KIS.cs" />
+    <Compile Include="Entities\Directory\Directory_Wagons.cs" />
+    <Compile Include="Entities\Directory\Directory_WagonsRent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
