--- a/IDSService/App.config
+++ b/IDSService/App.config
@@ -1,167 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
-    
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
-  </configSections>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
-  </startup>
-  <!-- *********** ЛОГИРОВАНИЕ В ФАЙЛ ************************************** -->
-  <log4net>
-    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="Logs\Informations.log"/>
-      <param name="AppendToFile" value="true"/>
-      <maxSizeRollBackups value="10"/>
-      <maximumFileSize value="5MB"/>
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
-      <layout type="log4net.Layout.PatternLayout">
-        <param name="ConversionPattern" value="%d  %-5p %m%n"/>
-      </layout>
-      <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="INFO"/>
-        <levelMax value="WARN"/>
-      </filter>
-    </appender>
-    <appender name="ErrorFile" type="log4net.Appender.RollingFileAppender">
-      <file value="Logs\Errors.log"/>
-      <appendToFile value="true"/>
-      <maximumFileSize value="5MB"/>
-      <maxSizeRollBackups value="10"/>
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%d %level %thread %logger - %message%newline"/>
-      </layout>
-      <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="ERROR"/>
-        <levelMax value="FATAL"/>
-      </filter>
-    </appender>
-    <appender name="DebugFile" type="log4net.Appender.RollingFileAppender">
-      <file value="Logs\Debug.log"/>
-      <appendToFile value="true"/>
-      <maximumFileSize value="5MB"/>
-      <maxSizeRollBackups value="10"/>
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%d %level %thread %logger - %message%newline"/>
-      </layout>
-      <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="DEBUG"/>
-        <levelMax value="DEBUG"/>
-      </filter>
-    </appender>
-    <logger name="LOGGER">
-      <appender-ref ref="LogFileAppender"/>
-      <appender-ref ref="ErrorFile"/>
-      <appender-ref ref="DebugFile"/>
-    </logger>
-  </log4net>
-  <appSettings>
-    <!-- *********** БИБЛИОТЕКА ЛОГИРОВАНИЯ **************************** -->
-    <!-- Настройки логирования -->
-    <add key="ESourceName" value="RWT"/>
-    <add key="ELogName" value="IDS_RWT"/>
-    <!-- В журнал Windows -->
-    <add key="ELog" value="True"/>
-    <add key="ELogException" value="True"/>
-    <add key="ELogEvent" value="True"/>
-    <add key="ELogServices" value="True"/>
-    <!-- В базу данных -->
-    <add key="DBLog" value="False"/>
-    <add key="DBLogException" value="True"/>
-    <add key="DBLogEvent" value="True"/>
-    <add key="DBLogServices" value="True"/>
-    <!-- В файл на диске -->
-    <add key="FLog" value="True"/>
-    <add key="FLogException" value="True"/>
-    <add key="FLogEvent" value="True"/>
-    <add key="FLogServices" value="True"/>
-    <!-- *********** СЕРВИСЫ  ***************************************** -->
-    <!-- сервис IDS_UpdateIncomingSupply обновление входящей поставки через SAP  -->
-    <add key="ActiveUpdateIncomingSupply" value="True"/>
-    <add key="IntervalUpdateIncomingSupply" value="3600"/><!-- выборка 1 раз в час -->
-    <add key="SAP_IS_DayApproachLimit" value="30"/><!-- Количество дней, ожидания вагона с подходов -->
-    <add key="SAP_IS_ExceptionsCargo" value="1;3;20;37;38;40"/><!-- Код грузов для исключения из опроса обновления по ним входящей поставки -->
-    <!-- сервис IDS_UpdateOutgoingSupply обновление исходящей поставки через SAP  -->
-    <add key="ActiveUpdateOutgoingSupply" value="True"/>
-    <add key="IntervalUpdateOutgoingSupply" value="3600"/><!-- выборка 1 раз в час -->
-    <!-- сервис IDS_UpdateArrivalEPD обновление ЭПД входящих вагонов  -->
-    <add key="ActiveUpdateArrivalEPD" value="True"/>
-    <add key="IntervalUpdateArrivalEPD" value="3600"/><!-- выборка 1 раз в час -->
-    <add key="EPD_DayArhiveArrival" value="90"/> <!-- Количество дней хранения ЭПД на сервере УЗ (3 месяца) -->
-    <add key="EPD_SearshArrival" value="False"/> <!-- Бит включить поиск в базе даных УЗ -->   
-    <!-- сервис IDS_UpdateSendingEPD обновление ЭПД входящих вагонов  -->
-    <add key="ActiveUpdateSendingEPD" value="True"/>
-    <add key="IntervalUpdateSendingEPD" value="3600"/><!-- выборка 1 раз в час -->
-    <add key="EPD_DayArhiveSending" value="80"/> <!-- Количество дней хранения ЭПД на сервере УЗ (3 месяца) -->
-    <!--Подключение к Модулю согласования-->
-	<add key="SMS_HOST" value="10.21.2.223" /><!--10.21.2.139-->
-	<add key="SMS_PORT" value="8787" />
-    <!-- Получение информации о вагоне -->
-    <add key="WebApiUZWagonURL" value="https://uz.gov.ua/car_info/index.php"/>
-    <!-- Сервис доступа к САП входящая и исходящая поставка -->
-    <!-- ПРОДУКТИВ -->
-    <add key="sap_url" value="https://krrzpmm1.europe.mittalco.com:50001/XMII/Runner"/>
-    <add key="sap_transaction_is" value="?Transaction=DataTransferToRailwaySystem2.0/Loader/GetDataAboudDelivery"/>
-    <add key="sap_login" value="service_user"/>
-    <add key="sap_pass" value="IIyr8OBHnSg8oO"/>
-    <!-- ТЕСТ -->
-    <!--<add key="sap_url" value="https://krrzdmm1.europe.mittalco.com:50001/XMII/Runner" />
+	<configSections>
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+
+		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+		<section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
+		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+	</configSections>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
+	</startup>
+	<!-- *********** ЛОГИРОВАНИЕ В ФАЙЛ ************************************** -->
+	<log4net>
+		<appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
+			<param name="File" value="Logs\Informations.log"/>
+			<param name="AppendToFile" value="true"/>
+			<maxSizeRollBackups value="10"/>
+			<maximumFileSize value="5MB"/>
+			<lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+			<layout type="log4net.Layout.PatternLayout">
+				<param name="ConversionPattern" value="%d  %-5p %m%n"/>
+			</layout>
+			<filter type="log4net.Filter.LevelRangeFilter">
+				<levelMin value="INFO"/>
+				<levelMax value="WARN"/>
+			</filter>
+		</appender>
+		<appender name="ErrorFile" type="log4net.Appender.RollingFileAppender">
+			<file value="Logs\Errors.log"/>
+			<appendToFile value="true"/>
+			<maximumFileSize value="5MB"/>
+			<maxSizeRollBackups value="10"/>
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%d %level %thread %logger - %message%newline"/>
+			</layout>
+			<filter type="log4net.Filter.LevelRangeFilter">
+				<levelMin value="ERROR"/>
+				<levelMax value="FATAL"/>
+			</filter>
+		</appender>
+		<appender name="DebugFile" type="log4net.Appender.RollingFileAppender">
+			<file value="Logs\Debug.log"/>
+			<appendToFile value="true"/>
+			<maximumFileSize value="5MB"/>
+			<maxSizeRollBackups value="10"/>
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%d %level %thread %logger - %message%newline"/>
+			</layout>
+			<filter type="log4net.Filter.LevelRangeFilter">
+				<levelMin value="DEBUG"/>
+				<levelMax value="DEBUG"/>
+			</filter>
+		</appender>
+		<logger name="LOGGER">
+			<appender-ref ref="LogFileAppender"/>
+			<appender-ref ref="ErrorFile"/>
+			<appender-ref ref="DebugFile"/>
+		</logger>
+	</log4net>
+	<appSettings>
+		<!-- *********** БИБЛИОТЕКА ЛОГИРОВАНИЯ **************************** -->
+		<!-- Настройки логирования -->
+		<add key="ESourceName" value="RWT"/>
+		<add key="ELogName" value="IDS_RWT"/>
+		<!-- В журнал Windows -->
+		<add key="ELog" value="True"/>
+		<add key="ELogException" value="True"/>
+		<add key="ELogEvent" value="True"/>
+		<add key="ELogServices" value="True"/>
+		<!-- В базу данных -->
+		<add key="DBLog" value="False"/>
+		<add key="DBLogException" value="True"/>
+		<add key="DBLogEvent" value="True"/>
+		<add key="DBLogServices" value="True"/>
+		<!-- В файл на диске -->
+		<add key="FLog" value="True"/>
+		<add key="FLogException" value="True"/>
+		<add key="FLogEvent" value="True"/>
+		<add key="FLogServices" value="True"/>
+		<!-- *********** СЕРВИСЫ  ***************************************** -->
+		<!-- сервис IDS_UpdateIncomingSupply обновление входящей поставки через SAP  -->
+		<add key="ActiveUpdateIncomingSupply" value="True"/>
+		<add key="IntervalUpdateIncomingSupply" value="3600"/>
+		<!-- выборка 1 раз в час -->
+		<add key="SAP_IS_DayApproachLimit" value="30"/>
+		<!-- Количество дней, ожидания вагона с подходов -->
+		<add key="SAP_IS_ExceptionsCargo" value="1;3;20;37;38;40"/>
+		<!-- Код грузов для исключения из опроса обновления по ним входящей поставки -->
+		<!-- сервис IDS_UpdateOutgoingSupply обновление исходящей поставки через SAP  -->
+		<add key="ActiveUpdateOutgoingSupply" value="True"/>
+		<add key="IntervalUpdateOutgoingSupply" value="3600"/>
+		<!-- выборка 1 раз в час -->
+		<!-- сервис IDS_UpdateArrivalEPD обновление ЭПД входящих вагонов  -->
+		<add key="ActiveUpdateArrivalEPD" value="True"/>
+		<add key="IntervalUpdateArrivalEPD" value="3600"/>
+		<!-- выборка 1 раз в час -->
+		<add key="EPD_DayArhiveArrival" value="90"/>
+		<!-- Количество дней хранения ЭПД на сервере УЗ (3 месяца) -->
+		<add key="EPD_SearshArrival" value="False"/>
+		<!-- Бит включить поиск в базе даных УЗ -->
+		<!-- сервис IDS_UpdateSendingEPD обновление ЭПД входящих вагонов  -->
+		<add key="ActiveUpdateSendingEPD" value="True"/>
+		<add key="IntervalUpdateSendingEPD" value="3600"/>
+		<!-- выборка 1 раз в час -->
+		<add key="EPD_DayArhiveSending" value="80"/>
+		<!-- Количество дней хранения ЭПД на сервере УЗ (3 месяца) -->
+		<!--Подключение к Модулю согласования-->
+		<add key="SMS_HOST" value="10.21.2.223" />
+		<!--10.21.2.139-->
+		<add key="SMS_PORT" value="8787" />
+		<!-- Получение информации о вагоне -->
+		<add key="WebApiUZWagonURL" value="https://uz.gov.ua/car_info/index.php"/>
+		<add key="WebApi_UZ_GOV" value="https://uz.gov.ua/"/>
+		<add key="WebApi_WAGON" value="car_info/index.php"/>
+		<add key="WebApi_STATION" value="nsi_cargo_stations/Nsi_Stan.php"/>
+		<!-- Сервис доступа к САП входящая и исходящая поставка -->
+		<!-- ПРОДУКТИВ -->
+		<add key="sap_url" value="https://krrzpmm1.europe.mittalco.com:50001/XMII/Runner"/>
+		<add key="sap_transaction_is" value="?Transaction=DataTransferToRailwaySystem2.0/Loader/GetDataAboudDelivery"/>
+		<add key="sap_login" value="service_user"/>
+		<add key="sap_pass" value="IIyr8OBHnSg8oO"/>
+		<!-- ТЕСТ -->
+		<!--<add key="sap_url" value="https://krrzdmm1.europe.mittalco.com:50001/XMII/Runner" />
     <add key="sap_transaction_is" value="?Transaction=DataTransferToRailwaySystem2.0/Loader/GetDataAboudDelivery" />
     <add key="sap_login" value="service_user" />
     <add key="sap_pass" value="IIyr8OBHnSg8oO" />-->
-  </appSettings>
-  <connectionStrings>
-    <add name="KIS" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=wagons;Password=trans_01;Data Source=Wagons"/>
-    <add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
-    <add name="UZ" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
-    <!--<add name="metrans" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
-    <add name="IDS" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
-    <add name="SMS" connectionString="data source=krr-sql-paclx02;initial catalog=KRR-PA-VIZ-Other_DATA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
-    <!--<add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />-->
-  </connectionStrings>
-  <entityFramework>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
-      <provider invariantName="Oracle.ManagedDataAccess.Client" type="Oracle.ManagedDataAccess.EntityFramework.EFOracleProviderServices, Oracle.ManagedDataAccess.EntityFramework, Version=6.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
-    </providers>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb"/>
-      </parameters>
-    </defaultConnectionFactory>
-  </entityFramework>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0"/>
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0"/>
-      </dependentAssembly>
-      <dependentAssembly>
-        <publisherPolicy apply="no"/>
-        <assemblyIdentity name="Oracle.ManagedDataAccess" publicKeyToken="89b483f429c47342" culture="neutral"/>
-        <bindingRedirect oldVersion="4.121.0.0 - 4.65535.65535.65535" newVersion="4.122.19.1"/>
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
-  <oracle.manageddataaccess.client>
-    <version number="*">
-      <dataSources>
-        <dataSource alias="Wagons" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=krr-sql24)(PORT=1521))(CONNECT_DATA=(SID=RESERV))) "/>
-      </dataSources>
-    </version>
-  </oracle.manageddataaccess.client>
-  <system.data>
-    <DbProviderFactories>
-      <remove invariant="Oracle.ManagedDataAccess.Client"/>
-      <add name="ODP.NET, Managed Driver" invariant="Oracle.ManagedDataAccess.Client" description="Oracle Data Provider for .NET, Managed Driver" type="Oracle.ManagedDataAccess.Client.OracleClientFactory, Oracle.ManagedDataAccess, Version=4.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
-    </DbProviderFactories>
-  </system.data>
+	</appSettings>
+	<connectionStrings>
+		<add name="KIS" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=wagons;Password=trans_01;Data Source=Wagons"/>
+		<add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+		<add name="UZ" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+		<!--<add name="metrans" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+		<add name="IDS" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+		<add name="SMS" connectionString="data source=krr-sql-paclx02;initial catalog=KRR-PA-VIZ-Other_DATA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+		<!--<add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />-->
+	</connectionStrings>
+	<entityFramework>
+		<providers>
+			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+			<provider invariantName="Oracle.ManagedDataAccess.Client" type="Oracle.ManagedDataAccess.EntityFramework.EFOracleProviderServices, Oracle.ManagedDataAccess.EntityFramework, Version=6.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
+		</providers>
+		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+			<parameters>
+				<parameter value="mssqllocaldb"/>
+			</parameters>
+		</defaultConnectionFactory>
+	</entityFramework>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0"/>
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0"/>
+			</dependentAssembly>
+			<dependentAssembly>
+				<publisherPolicy apply="no"/>
+				<assemblyIdentity name="Oracle.ManagedDataAccess" publicKeyToken="89b483f429c47342" culture="neutral"/>
+				<bindingRedirect oldVersion="4.121.0.0 - 4.65535.65535.65535" newVersion="4.122.19.1"/>
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
+	<oracle.manageddataaccess.client>
+		<version number="*">
+			<dataSources>
+				<dataSource alias="Wagons" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=krr-sql24)(PORT=1521))(CONNECT_DATA=(SID=RESERV))) "/>
+			</dataSources>
+		</version>
+	</oracle.manageddataaccess.client>
+	<system.data>
+		<DbProviderFactories>
+			<remove invariant="Oracle.ManagedDataAccess.Client"/>
+			<add name="ODP.NET, Managed Driver" invariant="Oracle.ManagedDataAccess.Client" description="Oracle Data Provider for .NET, Managed Driver" type="Oracle.ManagedDataAccess.Client.OracleClientFactory, Oracle.ManagedDataAccess, Version=4.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
+		</DbProviderFactories>
+	</system.data>
 </configuration>
