--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -1700,6 +1700,7 @@
     <Content Include="Content\module\shared\modal_edit_form.css" />
     <Content Include="Content\module\directory\table_dir_way.css" />
     <Content Include="Content\module\table_tree_way.css" />
+    <Content Include="Content\module\wsd\view_incoming_report.css" />
     <Content Include="Content\module\wsd\form_hd_outgoing_sostav.css" />
     <Content Include="Content\module\wsd\form_manual_incoming_cars.css" />
     <Content Include="Content\module\wsd\form_hi_incoming_sostav.css" />
@@ -1815,6 +1816,7 @@
     <Content Include="Scripts\module\wsd\table_outgoing_sostav.js" />
     <Content Include="Scripts\module\wsd\table_total_balance.js" />
     <Content Include="Scripts\module\wsd\table_manual_cars.js" />
+    <Content Include="Scripts\module\wsd\view_incoming_report.js" />
     <Content Include="Scripts\module\wsd\view_epd.js" />
     <Content Include="Scripts\module\wsd\view_incoming_cars.js" />
     <Content Include="Scripts\module\wsd\view_report_remainder_cars.js" />
