--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -1735,6 +1735,7 @@
     <Content Include="Images\8m.png" />
     <Content Include="Images\directory\line-icon-3_.svg" />
     <Content Include="Images\idsrwt\wsd\eye-solid.svg" />
+    <Content Include="Scripts\api\ids_server.js" />
     <Content Include="Scripts\api\ids_wsd.js" />
     <Content Include="Scripts\api\ids_direct.js" />
     <Content Include="Scripts\api\ids_global.js" />
