--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -18,7 +18,8 @@
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
-    <Use64BitIISExpress>false</Use64BitIISExpress>
+    <Use64BitIISExpress>
+    </Use64BitIISExpress>
     <IISExpressSSLPort>44326</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication>disabled</IISExpressAnonymousAuthentication>
     <IISExpressWindowsAuthentication>enabled</IISExpressWindowsAuthentication>
@@ -1703,6 +1704,7 @@
     <Content Include="Content\module\directory\table_dir_operators_wagons.css" />
     <Content Include="Content\module\directory\table_dir_park_station.css" />
     <Content Include="Content\module\directory\table_dir_park_ways.css" />
+    <Content Include="Content\module\report\view_sd_report.css" />
     <Content Include="Content\module\shared\form_detali.css" />
     <Content Include="Content\module\shared\modal_edit_form.css" />
     <Content Include="Content\module\directory\table_dir_way.css" />
@@ -1736,9 +1738,9 @@
     <Content Include="Content\view\directory\ways.css" />
     <Content Include="Content\view\directory\search_wagon.css" />
     <Content Include="Content\view\idsreport\home.css" />
+    <Content Include="Content\view\idsreport\main_sd_report.css" />
     <Content Include="Content\view\idsrwt\incoming1.css" />
     <Content Include="Content\view\idsrwt\outgoing1.css" />
-    <Content Include="Content\view\shared\dashboard.css" />
     <Content Include="Content\view\shared\print_way.css" />
     <Content Include="Content\view\shared\print_gfa.css" />
     <Content Include="Content\view\shared\_idsreport.css" />
@@ -1800,6 +1802,7 @@
     <Content Include="Scripts\module\directory\table_dir_operators_wagons.js" />
     <Content Include="Scripts\module\directory\table_dir_park_ways.js" />
     <Content Include="Scripts\module\directory\table_dir_park_station.js" />
+    <Content Include="Scripts\module\report\view_sd_report.js" />
     <Content Include="Scripts\module\shared\epd.js" />
     <Content Include="Scripts\module\shared\form_detali.js" />
     <Content Include="Scripts\module\shared\modal_confirm_form.js" />
@@ -1916,9 +1919,9 @@
     <Content Include="Content\fontawesome-free\webfonts\fa-solid-900.woff2" />
     <Content Include="Areas\IDSReport\Views\web.config" />
     <Content Include="Areas\IDSReport\Views\Home\Index.cshtml" />
-    <Content Include="Areas\IDSReport\Views\Home\Report_SD.cshtml" />
     <Content Include="Areas\IDSReport\Views\Shared\_IDSReport.cshtml" />
     <Content Include="Areas\IDSReport\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\IDSReport\Views\Home\Report_SD.cshtml" />
     <None Include="_app_offline.htm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
