--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -1746,6 +1746,7 @@
     <Content Include="Content\view\shared\print_gfa.css" />
     <Content Include="Content\view\shared\_idsreport.css" />
     <Content Include="Images\8m.png" />
+    <Content Include="Images\directory\icon-edit.svg" />
     <Content Include="Images\directory\line-icon-3_.svg" />
     <Content Include="Images\idsrwt\wsd\eye-solid.svg" />
     <Content Include="Scripts\api\ids_server.js" />
