--- a/WEB_UI/packages.config
+++ b/WEB_UI/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="bootstrap" version="4.5.3" targetFramework="net452" />
+  <package id="Bootstrap.Multiselect" version="1.1.1" targetFramework="net452" />
   <package id="bootstrap-select" version="1.13.18" targetFramework="net452" />
   <package id="datatables.net" version="1.10.21" targetFramework="net452" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net452" />
