--- a/WEB_UI/Web.config
+++ b/WEB_UI/Web.config
@@ -17,10 +17,18 @@
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 		<!-- Получение информации о вагоне -->
-		<add key="WebApiUZWagonURL" value="https://uz.gov.ua/car_info/index.php" />
+		<!--<add key="WebApiUZWagonURL" value="https://uz.gov.ua/car_info/index.php" />
 		<add key="WebApi_UZ_GOV" value="https://uz.gov.ua/" />
 		<add key="WebApi_WAGON" value="cargo_transportation/electronic_transportation/specifications_carriages_info" />
-		<add key="WebApi_STATION" value="nsi_cargo_stations/Nsi_Stan.php" />
+		<add key="WebApi_STATION" value="nsi_cargo_stations/Nsi_Stan.php" />-->
+
+		<add key="WebApiUZWagonURL" value="https://www.uz.gov.ua/car_info/index.php"/>
+		<add key="WebApi_UZ_GOV" value="https://www.uz.gov.ua/"/>
+		<add key="WebApi_WAGON" value="car_info/index.php"/>
+		<add key="WebApi_STATION" value="nsi_cargo_stations/Nsi_Stan.php"/>
+
+
+
 		<!-- Подключение к сервису модуля согласования -->
 		<add key="SMS_HOST" value="10.21.2.223" />
 		<!--10.21.2.139-->
