--- a/IDSService/App.config
+++ b/IDSService/App.config
@@ -111,8 +111,8 @@
 		<!--10.21.2.139-->
 		<add key="SMS_PORT" value="8787" />
 		<!-- Получение информации о вагоне -->
-		<add key="WebApiUZWagonURL" value="https://uz.gov.ua/car_info/index.php"/>
-		<add key="WebApi_UZ_GOV" value="https://uz.gov.ua/"/>
+		<add key="WebApiUZWagonURL" value="https://www.uz.gov.ua/car_info/index.php"/>
+		<add key="WebApi_UZ_GOV" value="https://www.uz.gov.ua/"/>
 		<add key="WebApi_WAGON" value="car_info/index.php"/>
 		<add key="WebApi_STATION" value="nsi_cargo_stations/Nsi_Stan.php"/>
 		<!-- Сервис доступа к САП входящая и исходящая поставка -->
@@ -134,7 +134,8 @@
 		<!--<add name="metrans" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
 		<add name="IDS" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
 		<add name="SMS" connectionString="data source=krr-sql-paclx02;initial catalog=KRR-PA-VIZ-Other_DATA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
-		<!--<add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />-->
+		<add name="IDS_ARHIV" connectionString="data source=krr-sql-paclx02;initial catalog=KRR-PA-CNT-Railway-Archive;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+	    <!--<add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />-->
 	</connectionStrings>
 	<entityFramework>
 		<providers>
