--- a/Test/App.config
+++ b/Test/App.config
@@ -133,7 +133,8 @@
     
     <add name="SMS" connectionString="data source=krr-sql-paclx02;initial catalog=KRR-PA-VIZ-Other_DATA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
     <add name="KIS" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=wagons;Password=trans_01;Data Source=Wagons"/>
-
+	<add name="IDS_ARHIV" connectionString="data source=krr-sql-paclx02;initial catalog=KRR-PA-CNT-Railway-Archive;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+	  
     <!--<add name="log" connectionString="data source=nb_hpedik;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="UZ" connectionString="data source=nb_hpedik;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="metrans" connectionString="data source=nb_hpedik;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
